# mightex

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.in  Doxyfile.conf  README.md  README_binary.md
.github/workflows/: cmake.yml  doxygen.yml
matlab/: mightex.m  starter.mlx  test.m
src/: defines.h.in  getopt.c  mightex.hh  mightex1304.c  mightex1304.h
src/main/: grab.c  listusb.c  test.c
src/wrappers/: setup.py
win/include/: getopt.h
win/lib/: libusb-1.0.lib
